# AAMA-sim

./: CMakeLists.txt  README.md  install_docker.sh  install_gazebo.sh  install_ros2.sh  package.xml  setup.cfg  setup.md  setup.py
aama_sim/comm_interface/: rabbitmq_interface.py  send.py
aama_sim/simulation_controller/: sensor_controller.py
aama_sim/simulation_interface/: robot_controller.py  uwb_controller.py
config/: sim_param.yaml
include/: logical_camera_plugin.h
launch/: aama_sim.launch.py  multi_robot.launch  multi_robot_house.launch.py  multi_robot_lab.launch  multi_robot_lab.launch.py  multi_robot_office.launch  robot_controller.launch.py  robot_description.launch.py  ros_gz_bridge.launch.py  sim_controller.launch  single_tb3_summon.launch
models/aama_robot/: model.config  model.sdf
models/aws_robomaker_residential_AirconditionerB_01/: model.sdf
models/aws_robomaker_residential_Ball_01/: model.sdf
models/aws_robomaker_residential_Bed_01/: model.sdf
models/aws_robomaker_residential_Carpet_01/: model.sdf
models/aws_robomaker_residential_ChairA_01/: model.sdf
models/aws_robomaker_residential_ChairD_01/: model.sdf
models/aws_robomaker_residential_CoffeeTable_01/: model.sdf
models/aws_robomaker_residential_CookingBench_01/: model.sdf
models/lab_floor/: model.config  model.sdf
msg/: LogicalImage.msg  Model.msg
src/: logical_camera_plugin.cpp
urdf/: aama_robot.urdf.xacro  common_base.urdf.xacro  custom_turtlebot3_burger.urdf.xacro  turtlebot3_burger.gazebo.xacro
worlds/: empty.world  no_roof_small_warehouse.world  small_house.world
(+155 files in other folders)
