<?xml version="1.0"?>
<package format="2">
  <name>aama_sim</name>
  <version>0.0.0</version>
  <description>The aama_sim package</description>
  <maintainer email="dogukan@todo.todo">dogukan</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>ament_python</depend>
  <depend>urdf</depend>
  <depend>rclcpp</depend>
  <depend>rclpy</depend>
  <depend>gazebo_msgs</depend>
  <depend>geometry_msgs</depend>

  <exec_depend>gazebo_ros_pkgs</exec_depend>
  <exec_depend>ros2launch</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
